--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -20,11 +20,11 @@ spec:
     spec:
       containers:
         - name: selenium
-          image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:$(Build.BuildId)-$(System.TeamProject)-$(Build.SourceBranchName)-selenium
+          image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:90-webapp-main-Se
           ports:
             - containerPort: 4444
         - name: calc-engine
-          image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:$(Build.BuildId)-$(System.TeamProject)-$(Build.SourceBranchName)-calc-engine
+          image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:90-webapp-main-Ca
           ports:
             - containerPort: 8080
           readinessProbe:
@@ -46,11 +46,11 @@ spec:
             successThreshold: 1
             failureThreshold: 5
         - name: graphql
-          image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:$(Build.BuildId)-$(System.TeamProject)-$(Build.SourceBranchName)-graphql
+          image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:90-webapp-main-Gr
           ports:
             - containerPort: 4000
         - name: dash-fe
-          image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:$(Build.BuildId)-$(System.TeamProject)-$(Build.SourceBranchName)-dash-fe
+          image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:90-webapp-main-Fe
           ports:
             - containerPort: 8050
           readinessProbe:
