--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,37 @@
 version: '3'
 
 services:
-  app1:
+  storage-engine:
     build: ./storage-engine
     networks:
       my-network:
         ipv4_address: 172.20.0.2
-    ports:
-      - "5006:5006"
 
-  app2:
+  calc-engine:
     build: ./calc-engine
     networks:
       my-network:
         ipv4_address: 172.20.0.3
-    ports:
-      - "5015:5015"
+    depends_on:
+      - storage-engine
 
-  app3:
+  graphql:
     build: ./graphql
     networks:
       my-network:
         ipv4_address: 172.20.0.4
-    ports:
-      - "5010:5010"
+    depends_on:
+      - calc-engine
 
-  app4:
+  dash-fe:
     build: ./dash-fe
     networks:
       my-network:
         ipv4_address: 172.20.0.5
     ports:
       - "8050:8050"
+    depends_on:
+      - graphql
 
 networks:
   my-network:
