--- a/storage-engine/Dockerfile
+++ b/storage-engine/Dockerfile
@@ -1,5 +1,6 @@
 # Use an official Python runtime as a parent image
 FROM --platform=linux/amd64 python:3.8-slim-buster
+# FROM python:3.8
 
 # Set the working directory to /app
 WORKDIR /app
@@ -10,7 +11,9 @@ COPY . /app
 COPY data.xlsx /app/storage-engine/data.xlsx
 
 # Install any needed packages specified in requirements.txt
-RUN pip install --trusted-host pypi.python.org -r requirements.txt
+RUN pip install -r requirements.txt
+
+RUN apt-get update && apt-get install -y python3-tk
 
 RUN pip install openpyxl
 
