--- a/calc-engine/Dockerfile
+++ b/calc-engine/Dockerfile
@@ -1,5 +1,6 @@
 # Use an official Python runtime as a parent image
 FROM --platform=linux/amd64 python:3.8-slim-buster
+# FROM python:3.8
 
 # Set the working directory to /app
 WORKDIR /app
@@ -8,7 +9,9 @@ WORKDIR /app
 COPY . /app
 
 # Install any needed packages specified in requirements.txt
-RUN pip install --trusted-host pypi.python.org -r requirements.txt
+RUN pip install -r requirements.txt
+
+RUN apt-get update && apt-get install -y python3-tk
 
 # Expose port 5015 for the Flask app to listen on
 EXPOSE 5015
