--- a/kubernetes/service.yml
+++ b/kubernetes/service.yml
@@ -1,12 +1,51 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: dash-app
+  name: dash-fe-service
 spec:
   selector:
     app: dash-fe
   ports:
-    - protocol: TCP
+    - name: http
       port: 8050
       targetPort: 8050
   type: LoadBalancer
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: graphql-service
+spec:
+  selector:
+    app: graphql
+  ports:
+    - name: http
+      port: 4000
+      targetPort: 4000
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: calc-engine-service
+spec:
+  selector:
+    app: calc-engine
+  ports:
+    - name: http
+      port: 8080
+      targetPort: 8080
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: storage-engine-service
+spec:
+  selector:
+    app: storage-engine
+  ports:
+    - name: http
+      port: 9000
+      targetPort: 9000
