--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -23,6 +23,25 @@ spec:
           image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:97-webapp-main-Se
           ports:
             - containerPort: 5006
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            timeoutSeconds: 1
+            successThreshold: 1
+            failureThreshold: 5
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 60
+            timeoutSeconds: 1
+            successThreshold: 1
+            failureThreshold: 5
+            
         - name: calc-engine
           image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:97-webapp-main-Ca
           ports:
@@ -45,10 +64,30 @@ spec:
             timeoutSeconds: 1
             successThreshold: 1
             failureThreshold: 5
+
         - name: graphql
           image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:97-webapp-main-Gr
           ports:
             - containerPort: 5020
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            timeoutSeconds: 1
+            successThreshold: 1
+            failureThreshold: 5
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 60
+            timeoutSeconds: 1
+            successThreshold: 1
+            failureThreshold: 5
+
         - name: dash-fe
           image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:97-webapp-main-Fe
           ports:
