--- a/storage-engine/Dockerfile
+++ b/storage-engine/Dockerfile
@@ -24,4 +24,4 @@ EXPOSE 5006
 ENV NAME World
 
 # Run app.py when the container launches
-CMD ["python", "run.py"]
+CMD ["python", "run.py","--port", "5006"]
