--- a/kubernetes/service.yml
+++ b/kubernetes/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: dash-fe-service
+  name: myapp
 spec:
   selector:
-    app: dash-fe
+    app: myapp
   ports:
     - name: http
       port: 8050
