--- a/kubernetes/service.yml
+++ b/kubernetes/service.yml
@@ -10,3 +10,42 @@ spec:
       port: 8050
       targetPort: 8050
   type: LoadBalancer
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: graphql-service
+spec:
+  selector:
+    app: graphql
+  ports:
+    - name: http
+      port: 5020
+      targetPort: 5020
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: calc-engine-service
+spec:
+  selector:
+    app: calc-engine
+  ports:
+    - name: http
+      port: 5015
+      targetPort: 5015
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: storage-engine-service
+spec:
+  selector:
+    app: storage-engine
+  ports:
+    - name: http
+      port: 5006
+      targetPort: 5006
