--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -46,6 +46,8 @@ spec:
           image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:97-webapp-main-ca
           ports:
             - containerPort: 5015
+          dependsOn:
+          - name: storage-engine
           # readinessProbe:
           #   httpGet:
           #     path: /healthz
@@ -69,6 +71,8 @@ spec:
           image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:97-webapp-main-gr
           ports:
             - containerPort: 5020
+          dependsOn:
+          - name: calc-engine
           # readinessProbe:
           #   httpGet:
           #     path: /healthz
@@ -92,6 +96,8 @@ spec:
           image: myacrwebapp.azurecr.io/flyingdutchmanproofofconceptbg:97-webapp-main-fe
           ports:
             - containerPort: 8050
+          dependsOn:
+          - name: graphql          
           # readinessProbe:
           #   httpGet:
           #     path: /healthz
